CVS (Thu Jan 30           GMT 2003)
   + add translation:     Finnish, Vesa Palmu 

CVS (Wed Jan 29           GMT 2003)
   - Minor translations updates in lang.fr, lang.no (Tobias)
   - 1 vocab added in functions.inc
   - Bug fix : if "select" is choosen in config.inc to show areas/rooms as a
     drop-down select box, an sql error occurs when the "change" button is 
     clicked (mostly used for non javascript users).

Version 1.1 (Tue Jan 14 10:00:00 GMT 2003)
   + Added configuration option ($twentyfourhour_format) to allow time
     formats to be changed to 12 hour format.
   - Updated all language files to be consistant
   - Changed minicals so they point to week when on week view and month on
     month view, rather than always pointing at day view
   - Changed occurences of "<?=" to "<?php echo" which means we still
     use the long tag form everywhere.
   - Removed all remainings english strings to make MRBS 100% translatable
     * Added new $vocab to del.php, edit_area_room.php, edit_entry.php,
       edit_entry_handler.php, help.php, mysql.inc, pgsql.inc, view_entry.php,
       functions.inc
   - Modified config.inc language section to choose a site_faq.html file
       translated in another language.
     * Modified help.php to take these changes into account.
     * Added site_faq_fr.html (french)
   + Added auth_name.inc, a auth_ip.inc variant using DNS name instead of ip.
   + Added auth_omni.inc for use with OmniHTTPd web server security features
   - Change search.php to remove warnings introduced with PHP 4.3.0
   - Change trailer.inc to make print preview more likely to work on
     windows and non-apache servers

Version 1.1-pre2 (Thu Jan  9 17:50:00 GMT 2003)

   + New POP3 authentication scheme (Daniel Gardner)
   - Updated Spanish translation
   - Fix for edit entry page. We now determine the area id
     of the room the meeting we're editting is in before
     getting a list of the rooms in that area. This solves